# password-manager-cli

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md
cli/: Cargo.toml
cli/src/: lib.rs
password-manager/: Cargo.toml
password-manager/src/: lib.rs
password_manager/: Cargo.toml
password_manager/src/: lib.rs
src/: backups.rs  cli.rs  consts.rs  database.rs  errors.rs  interface.rs  io.rs  lib.rs  main.rs  operations.rs  password.rs  password_manager.rs  password_operator.rs  security.rs  user_functions.rs  utils.rs
src/database/: manager.rs  mod.rs  queries.rs  utils.rs
src/objects/: input_key.rs  mod.rs  query_results.rs
