[package]
name = "password-manager"
version = "0.3.2-rc1"
edition = "2021"
authors = ["Aliyu Nauke"]
description = "A CLI tool used to manage passwords."

[dependencies]
rand = "0.8.5"
magic-crypt = "3.1.12"
dirs = "5.0.1"
rpassword = "7.2"
bcrypt = "0.14.0"
clap = { version = "4.5.15", features = ["derive"] }
anyhow = "1.0.86"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sqlx = { version = "0.8.0", features = ["runtime-async-std", "sqlite"] }
